alignment on the mobile fixed

--- a/movie/movie.css
+++ b/movie/movie.css
@@ -8,6 +8,7 @@ html{
 .movie_container {
     display: flex;
     flex-direction: row;
+    overflow: auto;
 }
 
 .box {
@@ -21,6 +22,7 @@ html{
 
     display: flex;
     align-items: center;
+    /* height: auto; */
 }
 
 .middle {
@@ -117,6 +119,9 @@ html{
 
 
 @media (max-width: 768px) {
+    html {
+        height:auto;
+    }
     .movie_container {
         flex-direction: column;
     }
